statum-macros/tests/ui/invalid_machine_wrong_generic.stderr
error: Error: machine `Machine` must use a plain type parameter as its first generic so Statum can link it to the generated state-family contract.
       Fix: declare `Machine<State>` where `State` is your `#[state]` enum.
  --> tests/ui/invalid_machine_wrong_generic.rs:21:16
   |
21 | struct Machine<S: Clone> {
   |                ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_wrong_generic.rs:23:2
   |
23 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_wrong_generic.rs`
